--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,6 @@
     "@babel/preset-react",
     "@babel/preset-env",
     "babel-preset-imbhargav5"
-  ]
+  ],
+  "plugins": ["babel-plugin-styled-components"]
 }
