--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/core": "7.0.1",
     "@babel/preset-env": "7.0.0",
     "@babel/preset-react": "7.0.0",
+    "@mdx-js/mdx": "0.15.2",
     "@taskr/babel": "1.1.0-next.1",
     "@taskr/clear": "1.1.0",
     "@taskr/esnext": "1.1.0",
@@ -28,6 +29,7 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "23.6.0",
     "babel-plugin-lodash": "3.3.4",
+    "babel-plugin-styled-components": "1.7.1",
     "babel-preset-imbhargav5": "2.0.0",
     "enzyme": "3.6.0",
     "enzyme-adapter-react-16": "1.5.0",
