--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "solo-react-skeleton",
+  "name": "@solo-gg/react-skeleton",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
