--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/preset-env": "7.0.0",
     "@babel/preset-react": "7.0.0",
     "@mdx-js/mdx": "0.15.2",
+    "@mdx-js/tag": "0.15.0",
     "@taskr/babel": "1.1.0-next.1",
     "@taskr/clear": "1.1.0",
     "@taskr/esnext": "1.1.0",
@@ -37,11 +38,13 @@
     "jest-styled-components": "6.2.0",
     "jsdom": "12.0.0",
     "next": "7.0.0-canary.18",
-    "react": "16.5.1",
-    "react-dom": "16.5.1",
+    "prismjs": "1.15.0",
+    "react": "^16.5.1",
+    "react-dom": "^16.5.1",
+    "react-live": "1.11.0",
     "react-test-renderer": "16.5.1",
     "rimraf": "2.6.2",
-    "styled-components": "4.0.0-beta.6",
+    "styled-components": "4.0.0-beta.4-hmr",
     "taskr": "1.1.0"
   },
   "jest": {
