--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@solo-gg/react-skeleton",
   "version": "0.0.1",
-  "description": "",
-  "main": "index.js",
+  "description": "⚡⚡⚡ Full fledged flexible skeleton loader for styled-components ⚡⚡⚡",
+  "main": "lib/index.js",
   "scripts": {
     "dev": "next",
     "test": "jest",
