--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@solo-gg/react-skeleton",
+  "name": "@solo.gg/react-skeleton",
   "version": "0.0.1",
   "description": "⚡⚡⚡ Full fledged flexible skeleton loader for styled-components ⚡⚡⚡",
   "main": "lib/index.js",
