--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test:watch": "jest --watch"
   },
   "keywords": [],
-  "author": "Bhargav Ponnapalli <bhargavponnapalli.5@gmail.com> (https://github.com/imbhargav5)",
+  "author": "solo.gg",
   "license": "MIT",
   "devDependencies": {
     "@babel/cli": "7.0.0",
@@ -65,5 +65,9 @@
     "testPathIgnorePatterns": [
       "<rootDir>/pages"
     ]
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/solomidnet/react-skeleton.git"
   }
 }
