--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "dev": "next",
     "test": "jest",
     "clean": "rimraf lib",
-    "prereleasepkg": "npm run clean",
-    "releasepkg": "babel src --out-dir lib",
+    "prerelease": "npm run clean",
+    "release": "babel src --out-dir lib",
     "build": "next build",
     "start": "next start",
     "prepublish": "npm run release && npm run test",
