--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "jest": "23.6.0",
     "jest-styled-components": "6.2.0",
     "jsdom": "12.0.0",
-    "next": "7.0.0-canary.18",
+    "next": "7.0.0-canary.20",
     "np": "3.0.4",
     "prismjs": "1.15.0",
     "react": "^16.5.1",
@@ -50,7 +50,7 @@
     "react-live": "1.11.0",
     "react-test-renderer": "16.5.1",
     "rimraf": "2.6.2",
-    "styled-components": "4.0.0-beta.4-hmr",
+    "styled-components": "4.0.0-beta.7",
     "taskr": "1.1.0"
   },
   "jest": {
